# kalmanfilter

./: .gitmodules  CMakeLists.txt  README.md
examples/: ball.json  gps.json
include/: KalmanFilter.hpp  gps_data.hpp
src/: KalmanFilter.cpp  gps_data.cpp  main.cpp
